fixed spacing between navigation bar and mapbuoy container

--- a/css/large.css
+++ b/css/large.css
@@ -6,7 +6,7 @@ div#container{
 
 div#mapbuoycontainer{
  width: 1030px;
-margin-top: 1.5em;
+margin-top: 1.7em;
 }
 
 div#mapcontainer{
