--- a/css/medium.css
+++ b/css/medium.css
@@ -6,7 +6,7 @@ div#container{
 
 div#mapbuoycontainer{
  width: auto;
-margin-top: 0.5em;
+margin-top: 0.2em;
 overflow: auto;
 }
 
