--- a/css/small.css
+++ b/css/small.css
@@ -10,7 +10,7 @@ div#headercontainer{
 
 div#mapbuoycontainer{
     width: auto;
-    margin-top: 0.5em;
+    margin-top: 0.1em;
     overflow: auto;
 }
 
